[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Free Enemies/Anim/Element Crystal 1A[anim].png" type="Texture" id=1]
[ext_resource path="res://scripts/cristal.gd" type="Script" id=2]
[ext_resource path="res://scenes/DetectTarget.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/attackhitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/softCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/wanderController.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=11]
radius = 12.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 5.0
height = 0.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ElementCrystal1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ElementCrystal1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 8, 9, 10, 11, 16, 17, 18, 19, 20, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 47 ]
}

[sub_resource type="Animation" id=4]
resource_name = "dano"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ElementCrystal1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 7, 8 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ElementCrystal1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "morto"
tracks/0/type = "value"
tracks/0/path = NodePath("ElementCrystal1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 48, 49, 50, 51 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 169.003

[sub_resource type="CapsuleShape2D" id=9]
radius = 12.0
height = 12.0

[sub_resource type="CircleShape2D" id=10]
radius = 3.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 14 )
shape = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/dano = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/morto = SubResource( 6 )

[node name="ElementCrystal1" type="Sprite" parent="."]
position = Vector2( -1.13687e-13, 5 )
scale = Vector2( 0.4875, 0.446875 )
texture = ExtResource( 1 )
hframes = 4
vframes = 14
frame = 1

[node name="DetectTarget" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 11 )

[node name="CollisionShape2D" parent="DetectTarget" index="0"]
modulate = Color( 1, 1, 1, 0.184314 )
position = Vector2( 0, 2 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 10

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="attackhitbox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="attackhitbox" index="0"]
position = Vector2( 0, 14 )
shape = SubResource( 9 )

[node name="softCollision" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="softCollision" index="0"]
position = Vector2( 0, 21 )
shape = SubResource( 10 )

[node name="Timerattack" type="Timer" parent="."]

[node name="wanderController" parent="." instance=ExtResource( 8 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="attackhitbox" to="." method="_on_attackhitbox_area_entered"]
[connection signal="timeout" from="Timerattack" to="." method="_on_Timerattack_timeout"]

[editable path="Hurtbox"]
[editable path="DetectTarget"]
[editable path="attackhitbox"]
[editable path="softCollision"]
